--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "marando/astrocoord",
   "description": "A PHP package of objects representing astronomical coordinate systems",
   "require": {
-    "marando/units": "^0.1.3"
+    "marando/units": "^0.1.3",
+    "marando/astrodate": "^0.2.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0"
