--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "name": "marando/astrocoord",
   "description": "A PHP package of objects representing astronomical coordinate systems",
   "require": {
-    "marando/units": "^0.3.1",
-    "marando/astrodate": "^0.2.7"
+    "marando/units": "^0.3.2",
+    "marando/astrodate": "^0.3.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0"
@@ -15,6 +15,8 @@
       "email": "a.marando@me.com"
     }
   ],
+  "minimum-stability": "alpha",
+  "prefer-stable": true,
   "autoload": {
     "psr-0": {
       "Marando": "src/"
