--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "description": "A PHP package of objects representing astronomical coordinate systems",
   "require": {
     "marando/units": "^0.3.2",
-    "marando/astrodate": "^0.3.2"
+    "marando/astrodate": "^0.3.2",
+    "marando/php-sofa": "^0.2.0@alpha"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0"
