--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "require": {
     "marando/units": "^0.3.2",
     "marando/astrodate": "^0.3.2",
-    "marando/php-sofa": "^0.2.0@alpha"
+    "marando/php-sofa": "^0.2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0"
